feat(fs-restrict): support audting
Signed-off-by: Dor Serero <dor.serero@gmail.com>

--- a/gadgets/fs-restrict/gadget.yaml
+++ b/gadgets/fs-restrict/gadget.yaml
@@ -3,8 +3,24 @@ description: Restrict execution to container rootfs
 homepageURL: 'TODO: Fill the gadget homepage URL'
 documentationURL: 'TODO: Fill the gadget documentation URL'
 sourceURL: 'TODO: Fill the gadget source code URL'
+datasources:
+  fs_restrict:
+    fields:
+      filename:
+        annotations:
+          description: 'TODO: Fill field description'
+      process:
+        annotations:
+          description: 'TODO: Fill field description'
+      timestamp_raw:
+        annotations:
+          description: 'TODO: Fill field description'
 params:
   ebpf:
+    enforce:
+      key: enforce
+      defaultValue: "true"
+      description: Enforce the restriction (block) or just audit
     targ_comm:
       key: targ_comm
       defaultValue: ""
