--- a/gadgets/kmod-restrict/gadget.yaml
+++ b/gadgets/kmod-restrict/gadget.yaml
@@ -3,8 +3,27 @@ description: Restrict kernel module loading and unloading
 homepageURL: 'TODO: Fill the gadget homepage URL'
 documentationURL: 'TODO: Fill the gadget documentation URL'
 sourceURL: 'TODO: Fill the gadget source code URL'
+datasources:
+  kmod_restrict:
+    fields:
+      kmod_op:
+        annotations:
+          description: 'TODO: Fill field description'
+      op:
+        annotations:
+          description: 'TODO: Fill field description'
+      process:
+        annotations:
+          description: 'TODO: Fill field description'
+      timestamp_raw:
+        annotations:
+          description: 'TODO: Fill field description'
 params:
   ebpf:
+    enforce:
+      key: enforce
+      defaultValue: "true"
+      description: Enforce the restriction (block) or just audit
     targ_comm:
       key: targ_comm
       defaultValue: ""
